Migration from deprecated Long constructor (#3289)
* feat: migration from old new Long constructor

* feat: migrating remaining deprecated constructors

---------

Co-authored-by: Anuragkillswitch <70265851+Anuragkillswitch@users.noreply.github.com>